--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 # History files
 .Rhistory
+RemoteSystemsTempFiles/
 
 # R data files from past sessions
 .Rdata
+
+# Log files
+*.log
 
 # Backup files
 *~
