Integrated the estimation of the surrogate fitness function with R

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
+RemoteSystemsTempFiles/
+.metadata/
+
 # History files
 .Rhistory
-RemoteSystemsTempFiles/
 
 # R data files from past sessions
 .Rdata
