Included partial instance creation in the service-composition example

--- a/crepe.examples/service-composition/build.xml
+++ b/crepe.examples/service-composition/build.xml
@@ -3,17 +3,13 @@
 	
 	<target name="run">
 		<!-- Load models -->	
-		<epsilon.emf.register file="metamodels/NRP.ecore"/>
 		<epsilon.emf.register file="metamodels/OrchestrationMM.ecore"/>
-		<epsilon.emf.register file="metamodels/NRPSolution.ecore"/>
 		<epsilon.emf.register file="../../crepe.core.meta/finitisation/finitisation.ecore"/>
 		<epsilon.emf.register file="../../crepe.core.meta/search/search.ecore"/>
 		<epsilon.emf.register file="../../crepe.core.meta/search/mo/mosearch.ecore"/>
 		<epsilon.emf.register file="../../crepe.core.meta/conf/configuration.ecore"/>
 		
-		<epsilon.emf.loadRegisteredMetamodel name="MM" metamodeluri="NextReleaseProblemSolution"/>
-		<epsilon.emf.loadRegisteredMetamodel name="MM2" metamodeluri="NextReleaseProblem"/>
-		<epsilon.emf.loadRegisteredMetamodel name="MM3" metamodeluri="OrchestrationMM"/>
+		<epsilon.emf.loadRegisteredMetamodel name="MM" metamodeluri="OrchestrationMM"/>
 		
 		<!-- The finitisation and input models are created by the script itself, 
 			but we still need to define a reference to the models for Epsilon to use. -->
@@ -22,12 +18,7 @@
 		    metamodelUri="http://crepe.core/meta/finitisation"
 	        read="false" store="true" />
 
-		<epsilon.emf.loadModel name="NRP"
-		    modelFile="models/input.model"
-		    metamodelUri="NextReleaseProblem"
-	        read="false" store="true" />
-		
-		<epsilon.emf.loadModel name="COMP"
+		<epsilon.emf.loadModel name="INPUT"
 		    modelFile="models/input2.model"
 		    metamodelUri="OrchestrationMM"
 	        read="false" store="true" />
@@ -40,7 +31,7 @@
 		
 		<epsilon.emf.loadModel name="MOD"
 		    modelFile="models/solution.model"
-		    metamodelUri="NextReleaseProblemSolution"
+		    metamodelUri="OrchestrationMM"
 	        read="false" store="false" />
 		
 		<epsilon.emf.loadModel name="SEARCH"
@@ -49,25 +40,15 @@
 	        read="false" store="true"/>
 		
 		<!-- Run experiment -->
-		<epsilon.eol src="createCompositioninstance.eol" taskname="COMP">
-			<model ref="COMP" /> 
+		<epsilon.eol src="createCompositionInstance.eol">
+			<model ref="INPUT" /> 
 		</epsilon.eol>
-		<!--<epsilon.eol src="createCompFinitisationModel.eol" taskname="COMP">
-			<model ref="COMP" /> 
-			<model ref="MM3" />
-			<model ref="FIN" />
-		</epsilon.eol>-->
-		
-		<epsilon.eol src="createNRPinstance.eol" taskname="NRP">
-			<model ref="NRP" /> 
-		</epsilon.eol>
-		<epsilon.eol src="createFinitisationModel.eol" taskname="NRP">
-			<model ref="NRP" /> 
+		<epsilon.eol src="createFinitisationModel.eol">
+			<model ref="INPUT" /> 
 			<model ref="MM" />
 			<model ref="FIN" />
 		</epsilon.eol>
-		<epsilon.eol src="nextReleaseProblem.eol" taskname="NRP">
-			<model ref="NRP" /> 
+		<epsilon.eol src="serviceCompositionProblem.eol">
 			<model ref="MOD" />
 			<model ref="MM" />
 			<model ref="FIN" />
