--- a/crepe.examples/service-composition-de/build.xml
+++ b/crepe.examples/service-composition-de/build.xml
@@ -1,15 +1,27 @@
 <?xml version="1.0"?>
 <project name="crepe.examples.tsp" basedir="." default="run">
+	<!-- load Epsilon tasks -->
+	<path id="epsilon-classpath">
+		<fileset dir="../../crepe.dependencies/lib/">
+			<include name="*.jar"/>
+		</fileset>
+	</path>
+	<taskdef resource="org/eclipse/epsilon/workflow/tasks/epsilontasks.xml"
+				classpathref="epsilon-classpath" loaderref="epsilon-classpath.loader"/>
 	
+	<taskdef resource="org/eclipse/epsilon/workflow/tasks/emf/epsilonemftasks.xml"
+				classpathref="epsilon-classpath" loaderref="epsilon-classpath.loader"/>
+
 	<target name="run">
 		<!-- Load models -->	
-		<epsilon.emf.register file="metamodels/OrchestrationMM.ecore"/>
+		<epsilon.emf.register file="metamodels/connectedNodes.ecore"/>
+		<epsilon.emf.register file="metamodels/orchestration-mod.ecore"/>
 		<epsilon.emf.register file="../../crepe.core.meta/finitisation/finitisation.ecore"/>
 		<epsilon.emf.register file="../../crepe.core.meta/search/search.ecore"/>
 		<epsilon.emf.register file="../../crepe.core.meta/search/mo/mosearch.ecore"/>
 		<epsilon.emf.register file="../../crepe.core.meta/conf/configuration.ecore"/>
 		
-		<epsilon.emf.loadRegisteredMetamodel name="MM" metamodeluri="OrchestrationMM"/>
+		<epsilon.emf.loadRegisteredMetamodel name="MM" metamodeluri="http://OrchestrationMM/1.0"/>
 
 		<!-- The finitisation and input models are created by the script itself, 
 			but we still need to define a reference to the models for Epsilon to use. -->
@@ -20,7 +32,7 @@
 
 		<epsilon.emf.loadModel name="INPUT"
 		    modelFile="models/input2.model"
-		    metamodelUri="OrchestrationMM"
+		    metamodelUri="http://OrchestrationMM/1.0"
 	        read="false" store="true" />
 	
 		<!-- FIXME: Need to add the Properties driver to Epsilon -->
@@ -31,7 +43,7 @@
 		
 		<epsilon.emf.loadModel name="MOD"
 		    modelFile="models/solution.model"
-		    metamodelUri="OrchestrationMM"
+		    metamodelUri="http://OrchestrationMM/1.0"
 	        read="false" store="false" />
 		
 		<epsilon.emf.loadModel name="SEARCH"
@@ -39,6 +51,10 @@
 	        metamodeluri="http://crepe.core/meta/search/mo"
 	        read="false" store="true"/>
 		
+		<epsilon.emf.loadModel name="OUT"
+				 	modelFile="models/predictors.xmi"
+					metamodelFile="metamodels/connectedNodes.ecore" />
+				
 		<!-- Run experiment -->
 		<epsilon.eol src="createCompositionInstance.eol" taskname="MM">
 			<model ref="INPUT" /> 
@@ -48,13 +64,14 @@
 			<model ref="MM" />
 			<model ref="FIN" />
 		</epsilon.eol>
-		<epsilon.eol src="serviceCompositionProblem.eol" taskname="MM" profile="true">
+		<epsilon.eol src="serviceCompositionProblem.eol" taskname="MM">
 			<model ref="INPUT" />
 			<model ref="MOD" />
 			<model ref="MM" />
 			<model ref="FIN" />
 			<model ref="CONF" />
 			<model ref="SEARCH" />
+			<model ref="OUT" />
 		</epsilon.eol>
 	</target>
 	
